ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /adminer
          pathType: Prefix
          backend:
            service:
              name: adminer-service
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 8000
